Version 3.3.1 (2010-xx-xx)
	Fixed bug where some valid_element patterns would produce an unknown property error.
	Fixed bug where it wasn't possible to toggle off blockquotes.
	Fixed bug where an undo level wasn't produced when applying formatting using the styles dropdown.
	Fixed bug where IE 6/7 wouldn't perform caret formatting due to a focus/event bug in IE.
	Fixed bug where undo/redo wasn't restoring the previous selection correctly.
	Fixed so the matchNode method of the Formatter class returns the matched format rule.
Version 3.3 (2010-03-10)
	Fixed bug where backspace on a table on IE would produce an empty tbody and some JS exceptions.
	Fixed bug where some redundant children wasn't removed properly when applying inline styles to them.
	Fixed bug where Chrome would produce incorect dialog sizes if the inlinepopups plugin wasn't used.
	Fixed bug where spans with different classes would get merged if they where siblings to each other.
	Fixed bug where IE 8 would crash if you used the spellchecker.
	Fixed bug where Input Method for non western languages didn't work correctly.
	Fixed bug where the UI would render incorrectly in FF 3.6 on Mac due to a bug n their rendering engine.
	Fixed bug where WebKit wouldn't scroll down correctly if Shift+Enter was used. Patch contributed by Thomas Andersen.
Version 3.3rc1 (2010-02-23)
	Fixed bug with new legacyoutput plugin not working correctly on it's own.
	Fixed bug some performance issues with removing text formats.
	Fixed bug where TinyMCE specific attributes wasn't removed properly by remove format.
	Fixed bug where it wasn't possible to align images within inline elements.
	Fixed bug where Ctrl+Delete/Backspace would produce an invalid argument exception on IE.
	Fixed bug where the search/replace logic could produce an infinite loop on IE for reverse searches.
	Fixed bug where cloning formats in cells didn't work properly on IE.
	Fixed bug where IE6 would produce a horizontal scroll bar.